--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -4,9 +4,11 @@ pandas==1.5.3
 scikit-learn==1.2.1
 matplotlib==3.7.0
 jupyter==1.0.0
+statsmodels
 
 # Deep learning frameworks (choose one or both as needed)
-tensorflow==2.11.0
+tensorflow-macos==2.11.0
+# tensorflow==2.11.0
 torch==1.13.1
 torchvision==0.14.1
 
@@ -17,3 +19,4 @@ en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_
 # Additional utilities
 requests==2.31.0
 tqdm==4.66.2
+matplotlib
