--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Ignore Jupyter Notebook checkpoints
 **/.ipynb_checkpoints/
 
-# Ignore everything in the assignments directory except notebooks
-assignments/*
-!assignments/**/*.ipynb
+# Ignore everything in the assignments directory
+assignments/**
+
+# Except notebooks named exactly 'assignment.ipynb' in any subfolder of assignments
+!assignments/**/assignment.ipynb
 
 # Ignore virtual environments
 ml_25/
